--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "qrcode": "^1.5.3",
     "validator": "^13.12.0"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.9",
     "@types/nodemailer": "^6.4.15",
+    "@types/qrcode": "^1.5.5",
     "@types/validator": "^13.12.0",
     "typescript": "^5.5.3"
   }
